# agent-assistant

./: .gitattributes  .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: main.js  router.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: agent
src-tauri/resources/prompt/: agent.md
src-tauri/src/: agent.rs  db.rs  lib.rs  main.rs  mcp.rs  mcp_async.rs  prompt.rs  tool.rs
src/components/agent/: ChatInput.vue  ChatMessage.vue  ConversationList.vue
src/components/settings/: McpConfig.vue
src/layouts/: AppLayout.vue
src/pages/: AgentPage.vue  BacktestPage.vue  DataPage.vue  LivePage.vue  SettingsPage.vue  StrategyPage.vue
src/pages/agent/: ChatInput.vue  ChatMessage.vue  Index.vue
src/pages/settings/: AgentConfig.vue  Index.vue  McpConfig.vue
src/router/: index.js
src/utils/: db.js  llm.js
