[package]
name = "agent-assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "agent_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
llama-cpp-2 = { version = "0.1.130" }
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
regex = "1"
encoding_rs = "0.8"
