[package]
name = "agent-assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
llama-cpp-2 = { version = "0.1.130" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
anyhow = "1.0"
rmcp = { version = "0.11", features = ["client", "transport-child-process"] }
parking_lot = "0.12"
regex = "1"
encoding_rs = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.19"


[features]
default = []
macos = ["llama-cpp-2/metal"]
amd = ["llama-cpp-2/vulkan"]
cuda = ["llama-cpp-2/cuda"]
